# sql-query-obfuscator

./: README.md  pyproject.toml  sql-query-obfuscator.py
tests/SQL/: SELECT-FROM.sql
